fix: overflow body into hidden

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: black;
     width: 100vw;
+    overflow: hidden;
 }
 
 .container {
